--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,15 @@ plugins {
 
 android {
 	namespace 'com.github.nuclearfog.nitterify'
-	compileSdk 33
+	buildToolsVersion '34.0.0'
+	compileSdk 34
 
 	defaultConfig {
 		applicationId "com.github.nuclearfog.nitterify"
 		minSdk 11
-		targetSdk 33
-		versionCode 1
-		versionName "1.0"
+		targetSdk 34
+		versionCode 2
+		versionName "1.0.1"
 		resConfigs 'en', 'de-rDE'
 	}
 
