--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,27 +3,28 @@ plugins {
 }
 
 android {
-	namespace 'com.github.nuclearfog.nitterify'
-	buildToolsVersion '34.0.0'
 	compileSdk 34
+	namespace 'com.github.nuclearfog.nitterify'
 
 	defaultConfig {
 		applicationId "com.github.nuclearfog.nitterify"
-		minSdk 11
-		targetSdk 34
-		versionCode 2
-		versionName "1.0.1"
+		minSdkVersion 11
+		targetSdkVersion 34
+		versionCode 3
+		versionName "2.0"
 		resConfigs 'en', 'de-rDE'
 	}
 
 	buildTypes {
 		release {
 			minifyEnabled true
+			shrinkResources true
+			debuggable false
+			multiDexEnabled false
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
 }
 
 dependencies {
-
 }
