--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
-
 	<application
 		android:allowBackup="false"
 		android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,15 +9,9 @@
 		android:label="@string/app_name"
 		android:theme="@style/Nitterify"
 		tools:targetApi="34" >
-	
-		<activity android:name=".MainActivity"
-			android:exported="true">
-
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-
+		<activity android:name=".RedirectActivity"
+			android:exported="true"
+			android:launchMode="singleTask">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -29,11 +22,14 @@
 				<data android:host="x.com"/>
 				<data android:host="mobile.x.com"/>
                 <data android:pathPattern=".*"/>
-
 			</intent-filter>
-
 		</activity>
-
+		<activity android:name=".MainActivity"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 	</application>
-
 </manifest>
