--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 		targetSdkVersion 34
 		versionCode 3
 		versionName "2.0"
-		resConfigs 'en', 'de-rDE'
+		resConfigs 'en', 'de'
 	}
 
 	buildTypes {
